# wisp_mvp

./: .gitignore  AGENT.md  AGENTS.md  DESIGN.md  README.md  SPEC.md  TESTPLAN.md  constitution.md  docker-compose.yml  pyproject.toml
.claude/: session-handoff.md
.github/workflows/: ci.yml
app/: cli.py  config.py  exceptions.py  main.py
app/ai/: __init__.py  crew_base.py  fakes.py  llm_factory.py  tavily_tool.py
app/api/: dependencies.py
app/crews/: compiler_crew.py  followup_crew.py  revision_crew.py  seeder_crew.py
app/db/: control.py  tenant.py
app/middleware/: tenancy.py
app/models/: auth.py  corporate_vitals.py  domain.py  domain_assignment.py  invitation.py  notification.py  password_reset.py  questions.py  signup.py  subscription.py  tenant.py  totp.py  user.py  version.py  voucher.py
app/services/: answers.py  audit.py  auth.py  compilation.py  domain.py  domain_assignment.py  email_backends.py  (+16 more)
docs/: deployment.md
features/: README.md  authentication.feature  contributor-questionnaire.feature  domain-assignment.feature  domain-seeding-and-questions.feature  review-workflow.feature  signup-and-onboarding.feature  user-and-role-management.feature  wisp-versioning-and-export.feature
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  playwright.manual.config.ts  playwright.screenshots.config.ts  vite.config.ts
infra/: Dockerfile  Dockerfile.dev  README.md  docker-entrypoint.sh  main.tf  outputs.tf  provider.tf  userdata.sh  variables.tf
scripts/: deploy.sh  dev-docker.sh
tasks/: lessons.md
tests/: conftest.py
(+127 files in other folders)
