[project]
name = "wispgen"
version = "0.1.0"
description = "Multi-tenant SaaS for generating Written Information Security Programs"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "aiosqlite>=0.20.0,<0.21.0",
    "httpx>=0.27.0",
    "orjson>=3.10.0",
    "argon2-cffi>=23.1.0",
    "pyotp>=2.9.0",
    "itsdangerous>=2.2.0",
    "crewai>=0.36.0",
    "boto3>=1.34.0",
    "stripe>=9.0.0",
    "weasyprint>=62.0",
    "tavily-python>=0.3.0",
]

[project.scripts]
wispgen = "app.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-bdd>=7.1.0",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=5.0.0",
    "freezegun>=1.5.0",
    "ruff>=0.5.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
fail_under = 85
show_missing = true
include = ["app/services/*", "app/domain/*"]
